# labelCheck_GPU

./: .gitignore  CMakeLists.txt  README.md  darknetBuildStep.md
darknet/: CM_dependencies.cmake
darknet/include/: darknet_version.h
model/: test.txt  train.txt  valid.txt  yolov4-tiny-class_3i.cfg  yolov4-tiny-class_3i_bak.cfg  yolov4-tiny.data
src/: labelCheck.cpp  labelCheck.h  main.cpp
